added treatement stats and decoupScript